# rhdp-rca-plugin

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.example.json
.claude-plugin/: marketplace.json
.claude/hooks/: session-start.sh
deploy/: Dockerfile  pod.yaml  run-eval.sh  secrets.yaml.template
experiments/: trace_analysis.ipynb
experiments/batch-rca-automation/: README.md  batch_rca_headless.sh
experiments/combine_rca_context/v1/scripts/: cli.py
experiments/combine_rca_context/v2/scripts/: cli.py
experiments/combine_rca_context/v3/scripts/: cli.py
skills/context-fetcher/: SKILL.md  mlflow-context.py
skills/feedback-capture/: README.md  SKILL.md
skills/feedback-capture/scripts/: formatting.py  mlflow_feedback.py  utils.py
skills/logs-fetcher/scripts/: fetch_logs_by_job.py  fetch_logs_ssh.py
skills/rca-annotator/: SKILL.md
skills/rca-annotator/references/: example_annotations.md
skills/rca-annotator/schemas/: schema.json
skills/rca-annotator/scripts/: cli.py  jumpbox_io.py  mlflow_eval.py  validate.py
skills/root-cause-analysis/: README.md  SKILL.md  github_mcp_verification.md
skills/root-cause-analysis/schemas/: github_context.schema.json  job_context.schema.json  summary.schema.json
skills/root-cause-analysis/scripts/: classify.py  cli.py  config.py  correlator.py  github_fetcher.py  job_parser.py  jumpbox_io.py  log_fetcher.py  setup.py  splunk_client.py  step4_fetch_github.py  tracing.py
skills/root-cause-analysis/tests/: test_classify.py
skills/root-cause-analysis/tests/data/: sample_job.json
skills/root-cause-analysis/tests/scripts/: test_job_parser.py
